// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn should match snapshot default 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-7wqm06"
      type="button"
    />
  </div>
</body>
`;

exports[`Btn should match snapshot props 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn customCss svelte-7wqm06"
      data-test="1"
      required="true"
      type="submit"
    />
  </div>
</body>
`;

exports[`Btn should match snapshot with slot 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-7wqm06"
      disabled=""
      required="false"
      type="button"
    >
      Test 
      <b>
        bold
      </b>
    </button>
  </div>
</body>
`;
